Fix alignment issue between the up next text and autoplay This is a bug fix that ensures both the up next and autoplay are on the same line. It makes the aside content more visually appealing. It adds a margin top to the a tag in the upnext div. It pushes the up next text down to be aligned with the autoplay.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -281,3 +281,7 @@ hr {
 #nav-menu-icon {
     margin-left: 16px;
 }
+.upnext > a {
+    margin-top: 7px;
+    color: #000;
+}
